Release 1.26.0 (#168)
* Release 1.26.0

* ApphubCI - Do not start application if DynamoDB location is not set

* Platform - PostgreSQL host stored in AppHubCI

* User - Delete old accessToken change set

* Platform - Move constants from Constants.js to their corresponding module

* Remove localizedText from errorResponse, and locale header from API calls

* Use placeholder for service hosts

* User - Migrate user and role to DynamoDB

* ApphubCI - Start DynamoDB option in local run menu

* Community - Delete old FE code

* Storage - StoredFile to DynamoDB (#169)

* Storage - StoredFile to DynamoDB

* Storage - Make it work

* Pre-release fixes