@@ -2,15 +2,14 @@ package com.github.saphyra.apphub.service.platform.encryption.shared_data;
 
 import com.github.saphyra.apphub.api.platform.encryption.model.AccessMode;
 import com.github.saphyra.apphub.api.platform.encryption.model.DataType;
+import com.github.saphyra.apphub.api.platform.encryption.model.EncryptionEndpoints;
 import com.github.saphyra.apphub.api.platform.encryption.model.EncryptionKey;
 import com.github.saphyra.apphub.api.platform.encryption.model.SharedData;
-import com.github.saphyra.apphub.api.platform.web_content.client.LocalizationClient;
 import com.github.saphyra.apphub.lib.common_domain.AccessToken;
 import com.github.saphyra.apphub.lib.common_domain.BiWrapper;
 import com.github.saphyra.apphub.lib.common_domain.ErrorCode;
 import com.github.saphyra.apphub.lib.common_util.collection.CollectionUtils;
 import com.github.saphyra.apphub.lib.common_util.converter.AccessTokenHeaderConverter;
-import com.github.saphyra.apphub.api.platform.encryption.model.EncryptionEndpoints;
 import com.github.saphyra.apphub.service.platform.encryption.shared_data.dao.SharedDataDao;
 import com.github.saphyra.apphub.test.rest_assured.ErrorResponseValidator;
 import com.github.saphyra.apphub.test.rest_assured.RequestFactory;
@@ -18,12 +17,10 @@ import com.github.saphyra.apphub.test.rest_assured.UrlFactory;
 import io.restassured.response.Response;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.data.repository.CrudRepository;
 import org.springframework.http.HttpStatus;
@@ -35,8 +32,6 @@ import java.util.Map;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.BDDMockito.given;
 
 @ExtendWith(SpringExtension.class)
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
@@ -44,7 +39,6 @@ import static org.mockito.BDDMockito.given;
 @Slf4j
 public class SharedDataControllerImplItTest {
     private static final UUID USER_ID = UUID.randomUUID();
-    private static final String LOCALIZED_MESSAGE = "localized-message";
     private static final UUID EXTERNAL_ID_1 = UUID.randomUUID();
     private static final UUID EXTERNAL_ID_2 = UUID.randomUUID();
     private static final AccessToken ACCESS_TOKEN_HEADER = AccessToken.builder()
@@ -61,16 +55,8 @@ public class SharedDataControllerImplItTest {
     @Autowired
     private AccessTokenHeaderConverter accessTokenHeaderConverter;
 
-    @MockBean
-    private LocalizationClient localizationClient;
-
     @Autowired
     private SharedDataDao sharedDataDao;
-
-    @BeforeEach
-    public void setUp() {
-        given(localizationClient.translate(any(), any())).willReturn(LOCALIZED_MESSAGE);
-    }
 
     @AfterEach
     public void clear() {
@@ -325,7 +311,7 @@ public class SharedDataControllerImplItTest {
             .put(UrlFactory.create(serverPort, EncryptionEndpoints.ENCRYPTION_INTERNAL_CREATE_SHARED_DATA));
 
         UUID sharedDataId = sharedDataDao.findAll()
-            .get(0)
+            .getFirst()
             .getSharedDataId();
 
         Response response = RequestFactory.createRequest()
